day 9 | vid 23 | product variant items

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -9667,3 +9667,8 @@ a:not([href]):not([class]):hover {
     bottom: 0 !important;
     /* position: absolute !important; */
 }
+
+.centered-btn {
+    display: revert;
+    vertical-align: middle;
+}
